# ce-render

./: .gitignore  Cargo.toml  README.md  ceapp.toml
.github/workflows/: ci.yml
examples/: ce-render.toml
images/: blender.Dockerfile  chrome.Dockerfile
src/: caps.rs  config.rs  farm.rs  lib.rs  main.rs  manifest.rs  placement.rs  proto.rs  shard.rs  verify.rs
tests/: integration.rs
