[package]
name = "ce-render"
version = "0.1.0"
edition = "2024"
description = "Headless-browser / Blender render farm over CE — fan an embarrassingly-parallel render (Blender frame range, headless-chrome screenshot/PDF batch) across atlas-ranked mesh hosts, collect output blobs by CID, reassemble. An application built ON CE primitives, not part of the node."
license = "MIT"
repository = "https://github.com/ce-net/ce-render"
keywords = ["ce", "render", "blender", "headless-chrome", "render-farm"]
categories = ["command-line-utilities", "multimedia"]
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]

# ce-render is both a small reusable library (frame-range sharding, the result manifest, placement
# and protocol types) and the `ce-render` binary. The library is unit-tested without a live cluster;
# the binary is the CLI over it.
[lib]
name = "ce_render"
path = "src/lib.rs"

[[bin]]
name = "ce-render"
path = "src/main.rs"

[dependencies]
# The CE SDK: blobs/objects (put_object/get_object), directed mesh placement (mesh_deploy),
# atlas/history for ranking, payment channels for per-frame billing, beacon for verify seeding.
ce-rs = { path = "../ce-rs" }
# The capability verifier primitive — clients present, hosts authorize a signed attenuating chain
# before honoring `render:frame`. ce-render presents; this crate also forges chains in tests.
ce-cap = { path = "../ce/crates/ce-cap" }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

[dev-dependencies]
ce-identity = { path = "../ce/crates/ce-identity" }
